# Maa_auto_panel

./: .dockerignore  .gitignore  AGENTS.md  BACKEND_AUDIT.md  CONTAINERIZATION_PLAN.md  Dockerfile  FRONTEND_AUDIT.md  PATH_MANAGEMENT_AUDIT.md  PROJECT_AUDIT.md  PROJECT_CLEANUP_AUDIT.md  PROJECT_EXECUTION_POLICY.md  README.md  RUN_MANAGER_REFACTOR_PLAN.md  compose.yaml  diagnose_arknights_crash.py  get_download_link.py  pyproject.toml  update_arknights.py
.codex/: project-history.md  project-lessons.md
.codex/conversations/: index.md
config/linux-maa/: settings.toml
config/maa/: cli.toml
docs/: AGENT_PROJECT_GUIDE.md  BACKEND_AUDIT.md  FRONTEND_AUDIT.md  README.md  architecture-direction.md  log-templates.md  maa-reading-notes.md  maa-runtime.md  scrcpy-url-protocol.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
scripts/: container-entrypoint  maa-env
src/linux_maa/: __init__.py  cli.py  constants.py  diagnostics.py  game_update.py  maa_runner.py  process.py  (+7 more)
tests/: test_backend_utilities.py  test_config_metadata.py  test_corrupt_state.py  test_log_templates.py  test_maa_cleanup.py  test_maa_logs.py  test_maa_stages.py  test_manual_run_manager.py  test_notifications.py  test_paths_and_migration.py  test_process.py  test_run_coordinator.py  test_run_manager.py  test_run_manager_command.py  test_run_state_and_diagnostics.py  test_scheduler_policy.py  test_scheduler_run_manager.py  test_scheduler_service_status.py  test_shutdown.py  test_web_exception_handlers.py  test_web_sse.py
(+333 files in other folders)
